[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Main Menu.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Main Menu/GameEndMenu.gd" type="Script" id=4]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/NinePatch 2.png-9001a897021d635897afce894cdd701b.stex"

[sub_resource type="DynamicFont" id=2]
size = 49
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/Jajan Simulator Nine Patch Rect GUI.png-d8ac364f7b52f3787f2ad02db187a9a4.stex"

[sub_resource type="DynamicFont" id=4]
size = 81
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 81
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 98
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 43
font_data = ExtResource( 2 )

[node name="GameEndMenu" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 4 )

[node name="MainMenu" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 399.0
margin_top = 247.0
margin_right = 866.0
margin_bottom = 427.0
rect_scale = Vector2( 0.4, 0.4 )
texture = SubResource( 1 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -89.0
margin_right = 190.0
margin_bottom = 64.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "Back to main menu"
align = 1
autowrap = true

[node name="BackButton" type="Button" parent="NinePatchRect"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -2.0
margin_right = 466.0
margin_bottom = 180.0

[node name="LevelInfo" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = -127.0
margin_right = 918.0
margin_bottom = 1013.0
rect_scale = Vector2( 0.4, 0.4 )
texture = SubResource( 3 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="LevelInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -525.0
margin_top = -485.0
margin_right = 195.0
margin_bottom = 157.0
custom_constants/separation = 100

[node name="MissingItemsTitle" type="Label" parent="LevelInfo/VBoxContainer"]
margin_right = 720.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 4 )
text = "Penalty from missing items"

[node name="TooMuchItemsTitle" type="Label" parent="LevelInfo/VBoxContainer"]
margin_top = 162.0
margin_right = 720.0
margin_bottom = 224.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 4 )
text = "Penalty from too much items"

[node name="RemainingTimeTitle" type="Label" parent="LevelInfo/VBoxContainer"]
margin_top = 324.0
margin_right = 720.0
margin_bottom = 386.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 4 )
text = "Remaining time bonus"

[node name="RewardMultiplierTitle" type="Label" parent="LevelInfo/VBoxContainer"]
margin_top = 486.0
margin_right = 720.0
margin_bottom = 548.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 4 )
text = "Reward multiplier"

[node name="TotalEarnedCoinsTitle" type="Label" parent="LevelInfo/VBoxContainer"]
margin_top = 648.0
margin_right = 720.0
margin_bottom = 710.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 4 )
text = "Total earned coins"

[node name="Calculation" type="VBoxContainer" parent="LevelInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.5
margin_top = -427.5
margin_right = 232.5
margin_bottom = 214.5
custom_constants/separation = 100

[node name="MissingItemsCalc" type="Label" parent="LevelInfo/Calculation"]
margin_right = 720.0
margin_bottom = 62.0
custom_colors/font_color = Color( 1, 0.823529, 0.694118, 1 )
custom_fonts/font = SubResource( 4 )
text = "Penalty from missing items"

[node name="TooMuchItemsCalc" type="Label" parent="LevelInfo/Calculation"]
margin_top = 162.0
margin_right = 720.0
margin_bottom = 224.0
custom_colors/font_color = Color( 1, 0.823529, 0.694118, 1 )
custom_fonts/font = SubResource( 4 )
text = "Penalty from too much items"

[node name="RemainingTimeCalc" type="Label" parent="LevelInfo/Calculation"]
margin_top = 324.0
margin_right = 720.0
margin_bottom = 386.0
custom_colors/font_color = Color( 1, 0.823529, 0.694118, 1 )
custom_fonts/font = SubResource( 4 )
text = "Remaining time bonus"

[node name="RewardMultiplierCalc" type="Label" parent="LevelInfo/Calculation"]
margin_top = 486.0
margin_right = 720.0
margin_bottom = 548.0
custom_colors/font_color = Color( 1, 0.823529, 0.694118, 1 )
custom_fonts/font = SubResource( 4 )

[node name="TotalEarnedCoinsCalc" type="Label" parent="LevelInfo/Calculation"]
margin_top = 648.0
margin_right = 720.0
margin_bottom = 710.0
custom_colors/font_color = Color( 1, 0.823529, 0.694118, 1 )
custom_fonts/font = SubResource( 4 )
text = "Total earned coins"

[node name="VBoxContainer3" type="VBoxContainer" parent="LevelInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 320.0
margin_top = -485.0
margin_right = 350.0
margin_bottom = 225.0
custom_constants/separation = 100

[node name="=" type="Label" parent="LevelInfo/VBoxContainer3"]
margin_right = 30.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 5 )
text = "="

[node name="=2" type="Label" parent="LevelInfo/VBoxContainer3"]
margin_top = 162.0
margin_right = 30.0
margin_bottom = 224.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 5 )
text = "="

[node name="=3" type="Label" parent="LevelInfo/VBoxContainer3"]
margin_top = 324.0
margin_right = 30.0
margin_bottom = 386.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 5 )
text = "="

[node name="=4" type="Label" parent="LevelInfo/VBoxContainer3"]
margin_top = 486.0
margin_right = 30.0
margin_bottom = 548.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 5 )
text = "="

[node name="=5" type="Label" parent="LevelInfo/VBoxContainer3"]
margin_top = 648.0
margin_right = 30.0
margin_bottom = 710.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 5 )
text = "="

[node name="Total" type="VBoxContainer" parent="LevelInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 380.0
margin_top = -485.0
margin_right = 481.0
margin_bottom = 207.0
custom_constants/separation = 86

[node name="MissingItems" type="Label" parent="LevelInfo/Total"]
margin_right = 101.0
margin_bottom = 75.0
custom_colors/font_color = Color( 1, 0.933333, 0.886275, 1 )
custom_fonts/font = SubResource( 6 )
text = "180"

[node name="TooMuchItems" type="Label" parent="LevelInfo/Total"]
margin_top = 161.0
margin_right = 101.0
margin_bottom = 236.0
custom_colors/font_color = Color( 1, 0.933333, 0.886275, 1 )
custom_fonts/font = SubResource( 6 )
text = "180"

[node name="RemainingTime" type="Label" parent="LevelInfo/Total"]
margin_top = 322.0
margin_right = 101.0
margin_bottom = 397.0
custom_colors/font_color = Color( 1, 0.933333, 0.886275, 1 )
custom_fonts/font = SubResource( 6 )
text = "180"

[node name="RewardMultiplier" type="Label" parent="LevelInfo/Total"]
margin_top = 483.0
margin_right = 101.0
margin_bottom = 558.0
custom_colors/font_color = Color( 1, 0.933333, 0.886275, 1 )
custom_fonts/font = SubResource( 6 )
text = "180"

[node name="TotalEarnedCoins" type="Label" parent="LevelInfo/Total"]
margin_top = 644.0
margin_right = 101.0
margin_bottom = 719.0
custom_colors/font_color = Color( 1, 0.933333, 0.886275, 1 )
custom_fonts/font = SubResource( 6 )
text = "180"

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -296.0
margin_top = -219.0
margin_right = 296.0
margin_bottom = -143.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 7 )
text = "Jajan Performance Report"
align = 1

[connection signal="pressed" from="NinePatchRect/BackButton" to="." method="_on_BackButton_pressed"]
